# BananaStore

./: .env.example  CLAUDE.md  README.md  pyproject.toml
app/: config.py  costs.py  handlers.py  i18n.py  main.py  providers.py  routes.py  schemas.py  session.py  standalone.py  svg.py  util.py  ws.py
app/components/: __init__.py  bananastore.js  bananastore.py
app/llm/: __init__.py  anthropic.py  azure_openai.py  base.py  google.py  openai.py
proxy/: nginx.conf
samples/nicegui_host/: main.py
static/: app.js  i18n.js  index.html  styles.css  widget.html
static/locales/: de.json  en.json
tests/: conftest.py  test_costs.py  test_integration.py  test_llm_anthropic.py  test_llm_azure.py  test_llm_google.py  test_llm_init.py  test_llm_openai.py  test_routes.py  test_session.py  test_svg.py  test_util.py  test_ws.py
